--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,11 @@
     
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>    
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+          <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+        </ng-container>
         <!-- First Name Column -->
         <ng-container matColumnDef="firstName">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
@@ -29,34 +34,34 @@
           <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
         </ng-container>
     
-        <!-- Date Of Birth Column -->
-        <ng-container matColumnDef="dateOfBirth">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Of Birth </th>
-          <td mat-cell *matCellDef="let row"> {{row.dateOfBirth | date }}  </td>
+        <!-- Employee Since Column -->
+        <ng-container matColumnDef="employeeSince">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Employee Since </th>
+          <td mat-cell *matCellDef="let row"> {{row.employeeSince | date }}  </td>
         </ng-container>
 
-        <!-- Gender Column -->
-        <ng-container matColumnDef="gender">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
-          <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Position </th>
+          <td mat-cell *matCellDef="let row"> {{row.position}} </td>
         </ng-container>
 
-        <!-- Address Column -->
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-          <td mat-cell *matCellDef="let row"> {{row.address}} </td>
+        <!-- Area Column -->
+        <ng-container matColumnDef="area">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Area </th>
+          <td mat-cell *matCellDef="let row"> {{row.area}} </td>
         </ng-container>
 
-        <!-- Zip Code Column -->
-        <ng-container matColumnDef="zipCode">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Zip Code </th>
-          <td mat-cell *matCellDef="let row"> {{row.zipCode}} </td>
+        <!-- Location Column -->
+        <ng-container matColumnDef="location">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Location </th>
+          <td mat-cell *matCellDef="let row"> {{row.location}} </td>
         </ng-container>        
 
-        <!-- University Column -->
-        <ng-container matColumnDef="university">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> University </th>
-          <td mat-cell *matCellDef="let row"> {{row.university}} </td>
+        <!-- Manager Column -->
+        <ng-container matColumnDef="manager">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Manager </th>
+          <td mat-cell *matCellDef="let row"> {{row.manager}} </td>
         </ng-container>   
 
         <!-- University Action -->
