--- a/src/app/nst-info-form/nst-info-form.component.html
+++ b/src/app/nst-info-form/nst-info-form.component.html
@@ -68,7 +68,7 @@
               </form>
             </div>
         </div>
-        <div class="footerButtons">                        
+        <div style="margin-top:250px" class="footerButtons">                        
           <button mat-stroked-button color="warn" matStepperPrevious disabled="true"><mat-icon>keyboard_arrow_left</mat-icon> Back</button>
           <div>
             <button mat-stroked-button color="warn" style="margin-right: 20px;">Cancel</button>
@@ -89,7 +89,7 @@
           <input matInput formControlName="zipCode" type="number" placeholder="Zip Code"
                  required>
         </mat-form-field>
-        <div class="footerButtons">                        
+        <div style="margin-top:50px" class="footerButtons">                        
           <button mat-stroked-button color="warn" matStepperPrevious><mat-icon>keyboard_arrow_left</mat-icon> Back</button>
           <div>
             <button mat-stroked-button color="warn" style="margin-right: 20px;">Cancel</button>
@@ -106,7 +106,8 @@
           <input matInput formControlName="university" placeholder="University"
                  required>
         </mat-form-field>
-        <div class="footerButtons">                        
+        
+        <div  style="margin-top:50px" class="footerButtons">                        
           <button mat-stroked-button color="warn" matStepperPrevious><mat-icon>keyboard_arrow_left</mat-icon> Back</button>
           <div>
             <button mat-stroked-button color="warn" style="margin-right: 20px;">Cancel</button>
@@ -114,6 +115,7 @@
           </div>
           <button mat-stroked-button color="secondary" matStepperNext disabled="true">Next <mat-icon>keyboard_arrow_right</mat-icon></button>
         </div>
+      
       </form>
     </mat-step>
   </mat-stepper>
